continuing the revisions